--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,9 @@ django-appconf==1.0.3
 django-pyscss==2.0.2
 django-treebeard==4.3
 django-widget-tweaks==1.4.5
+django-simple-captcha==0.5.12
+django-recaptcha==2.0.6
+django-ckeditor==5.9.0
 ez-setup==0.9
 gunicorn==19.9.0
 idna==2.7
