--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,7 @@ migrations/
 .idea/
 local_settings.py
 db.sqlite3
-media
+media/
 
 # If your build process includes running collectstatic, then you probably don't need or want to include staticfiles/
 # in your Git repository. Update and uncomment the following line accordingly.
